--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Tiro+Bangla:ital@0;1&display=swap" rel="stylesheet">
     <!-- style -->
     <style>
+        html {
+            scroll-behavior: smooth;
+            scroll-padding-top: 80px;
+        }
         .bangla-logo{
             font-family: "Tiro Bangla", serif;
         }
@@ -36,8 +40,8 @@
     <!-- Header -->
    <header>
     <!-- navbar -->
-     <nav>
-        <div class="navbar bg-base-300 shadow-sm py-7 px-20">
+     <nav class="sticky top-0 z-index: 1000">
+        <div class="navbar bg-base-200 shadow-sm py-7 px-20 border-b-2 border-[#C6BDBD]">
             <div class="flex-1">
               <a class="btn btn-ghost text-xl">
                 <span class="english font-semibold text-[20px]">English</span>
@@ -45,22 +49,119 @@
                 <span class="bangla-logo font-normal text-[20px]">জানালা</span></a>
             </div>
             <div class="flex gap-3">
-              <a href="#1"><button class="btn btn-outline btn-primary"><i class="fa-solid fa-circle-question"></i>FAQ</button></a>
-             <a href="#2"> <button class="btn btn-outline btn-primary"><i class="fa-solid fa-book-open"></i>Learn</button></a>
-             <a href="#3"> <button class="btn btn-outline btn-primary"><i class="fa-solid fa-arrow-right-from-bracket"></i>Logout</button></a>
+              <a href="#faq"><button class="btn btn-outline btn-primary"><i class="fa-solid fa-circle-question"></i>FAQ</button></a>
+             <a href="#learn"> <button class="btn btn-outline btn-primary"><i class="fa-solid fa-book-open"></i>Learn</button></a>
+             <a href="#logout"> <button class="btn btn-outline btn-primary"><i class="fa-solid fa-arrow-right-from-bracket"></i>Logout</button></a>
             </div>
           </div>
      </nav>
+     <!-- hero section -->
+     <section id="hero" class="my-5 flex justify-evenly items-center gap-5">
+        <div class="flex flex-col gap-5 p-20">
+            <h1 class="english font-bold text-5xl"><span class="text-[#00BCFF]">English</span> is Easy!!</h1>
+            <p class="bangla text-[#18181B] font-medium">আজ থেকেই আপনার ভাষা শেখার যাত্রা শুরু করুন। আপনি যদি নতুন হন অথবা <br> আপনার দক্ষতা বাড়াতে চান, আমাদের Interactive Lessons আপনাকে নিয়ে <br> যাবে অন্য একটি Level এ</p>
+              <form class="flex flex-col">
+                <input type="text" class="w-[320px] p-1 border-[#18181B50]" placeholder="Enter Your Name" required/> <br>
+              <input type="password" class="w-[320px] p-1 border-[#18181B50]" placeholder="Enter Login Pin (123456)" required/>
+              <div>
+                <button class="btn btn-primary mt-4">Get Started</button>
+           </div>
+              </form>
+            
+
+        </div>
+        <div>
+            <img class="w-3/4" src="./assets/hero-student.png" alt="image">
+        </div>
+     </section>
    </header>
 
    <!-- main -->
    <main>
-  
+    <section id="faq" class="w-11/12 mx-auto my-20 space-y-3">
+        <div class="collapse collapse-plus bg-base-300 border border-base-300">
+            <input type="radio" name="my-accordion-3" checked="checked" />
+            <div class="collapse-title  font-medium text-[16px]">1. How can I start learning English on this website?</div>
+            <div class="collapse-content text-sm">Click the "Get Started" button in the top right corner and follow the registration process.👌</div>
+          </div>
+
+        <div class="collapse collapse-plus bg-base-300 border border-base-300">
+            <input type="radio" name="my-accordion-3" checked="checked" />
+            <div class="collapse-title  font-medium text-[16px]">2. Is this website free to use?</div>
+            <div class="collapse-content text-sm"> Yes, you can access basic courses for free, but some advanced features may require a subscription. 🆓</div>
+          </div>
+
+        <div class="collapse collapse-plus bg-base-300 border border-base-300">
+            <input type="radio" name="my-accordion-3" checked="checked" />
+            <div class="collapse-title font-medium text-[16px]">3.  Do I need to create an account?</div>
+            <div class="collapse-content text-sm"> Yes, creating an account is required to track progress and access all features. 😊</div>
+          </div>
+
+          <div class="collapse collapse-plus bg-base-300 border border-base-300">
+            <input type="radio" name="my-accordion-3" />
+            <div class="collapse-title  font-medium text-[16px]">4. How can I build my English vocabulary?</div>
+            <div class="collapse-content text-sm"> Practice daily with our word lists, flashcards, quizzes, and interactive exercises! 📖</div>
+          </div>
+
+          <div class="collapse collapse-plus bg-base-300 border border-base-300">
+            <input type="radio" name="my-accordion-3" />
+            <div class="collapse-title font-medium text-[16px]">5. Do you offer certificates for completed courses?</div>
+            <div class="collapse-content text-sm"> Yes, we provide certificates upon successful course completion! 🎓😊</div>
+          </div>
+    </section>
    </main>
 
    <!-- Footer -->
    <footer>
+    <section class="footer sm:footer-horizontal bg-base-100 shadow-sm items-center p-20 border-t-2 border-[#FFEBEB]">
+        <aside class="grid-flow-row items-center">
+                <a class="flex items-center text-md">
+                  <span class="english font-semibold text-[20px]">English</span>
+                  <img src="./assets/logo.png" alt="">
+                  <span class="bangla-logo font-normal text-[20px]">জানালা</span></a>
+          <p class="bangla text-sm font-medium">ইংরেজি শিখুন সহজে</p>
+          <p class="english text-sm">Providing ED-Tech Applications since 2025</p>
 
+        </aside>
+        <nav class="grid-flow-row gap-4 md:place-self-center md:justify-self-end">
+            <p>Follow Us</p>
+          <div class="flex gap-2">
+            <a>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="18"
+                  height="18"
+                  viewBox="0 0 24 24"
+                  class="fill-current">
+                  <path
+                    d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"></path>
+                </svg>
+              </a>
+              <a>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="18"
+                  height="18"
+                  viewBox="0 0 24 24"
+                  class="fill-current">
+                  <path
+                    d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"></path>
+                </svg>
+              </a>
+              <a>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="18"
+                  height="18"
+                  viewBox="0 0 24 24"
+                  class="fill-current">
+                  <path
+                    d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"></path>
+                </svg>
+              </a>
+          </div>
+        </nav>
+      </section>
    </footer>
 
     <!-- script -->
