--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!-- Header -->
    <header>
     <!-- navbar -->
-     <nav class="fixed top-0 left-0 w-full z-index:1000">
+     <nav class="fixed top-0 left-0 w-full z-50">
         <div class="navbar bg-base-200 shadow-sm py-7 px-20 border-b-2 border-[#C6BDBD]">
             <div class="flex-1">
               <a class="btn btn-ghost text-xl">
