--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
     <!-- Header -->
    <header>
     <!-- navbar -->
-     <nav class="fixed top-0 left-0 w-full z-50">
+     <nav id="nav" class="fixed top-0 left-0 w-full z-50">
         <div class="navbar bg-base-200 shadow-sm py-7 px-20 border-b-2 border-[#C6BDBD]">
             <div class="flex-1">
-              <a class="btn btn-ghost text-xl">
+              <a id="home" class="btn btn-ghost text-xl">
                 <span class="english font-semibold text-[20px]">English</span>
                 <img src="./assets/logo.png" alt="">
                 <span class="bangla-logo font-normal text-[20px]">জানালা</span></a>
@@ -88,11 +88,12 @@
         <h1 class="english font-bold text-5xl"><span class="text-[#00BCFF]">Let's </span>Learn Vocabularies</h1>
         <div id="btn-container" class="flex gap-2">
         </div>
+        <section id="loader" class="hidden"><span class="loading loading-ring loading-xl"></span></section>
         <div id="content" class="w-full mt-4 mx-auto bg-base-200 p-20 rounded-sm">
             <p class="bangla text-[#79716B]">আপনি এখনো কোন Lesson Select করেননি</p>
             <p class="bangla english font-medium text-[24px]">একটি Lesson Select করুন।</p>
         </div>
-        <section id="card-container" class="p-10 grid grid-cols-3 gap-3  bg-base-200">
+        <section id="card-container" class="p-10 grid grid-cols-3 gap-3 bg-base-200">
             
         </section>
     </article>
@@ -102,8 +103,13 @@
     <!-- Open the modal using ID.showModal() method -->
     <dialog id="modal_details" class="modal">
       <div class="modal-box overflow-hidden">
-        <div id="modal-content" class=" bg-base-100 m-2 w-full overflow-hidden flex flex-col gap-3">
+        <div id="modal-content" class=" bg-base-200 rounded-md my-2 p-2 w-full overflow-hidden flex flex-col gap-3  hover:bg-sky-200">
           
+      </div>
+      <div class="modal-start">
+        <form method="dialog">
+          <button class="btn btn-primary">Complete Learning</button>
+        </form>
       </div>
     </dialog>
     <!-- modal end -->
@@ -189,7 +195,7 @@
         <nav class="grid-flow-row gap-4 md:place-self-center md:justify-self-end">
             <p>Follow Us</p>
           <div class="flex gap-2">
-            <a>
+            <a href="#" class="cursor-pointer">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="18"
@@ -200,7 +206,7 @@
                     d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"></path>
                 </svg>
               </a>
-              <a>
+              <a href="#" class="cursor-pointer">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="18"
@@ -211,7 +217,7 @@
                     d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"></path>
                 </svg>
               </a>
-              <a>
+              <a href="#" class="cursor-pointer">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="18"
