minor change and new features added

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Tiro+Bangla:ital@0;1&display=swap" rel="stylesheet">
+    <!-- Sweet alert -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- style -->
     <style>
         html {
@@ -117,6 +119,7 @@
 
     <!-- FAQ Section -->
     <section id="faq" class="w-11/12 mx-auto my-20 space-y-3 z-0 ">
+      <h1 class="english font-bold text-5xl text-center my-7"><span class="text-[#00BCFF]">Frequently </span>Asked Questions</h1>
         <div class="collapse collapse-plus bg-base-300 border border-base-300">
             <input type="radio" name="my-accordion-3" checked="checked" />
             <div class="collapse-title  font-medium text-[16px]">1. Difference Between var, let, and const</div>
